--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,23 +19,23 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Pieces/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Pieces/", "res://Assets/", "res://Assets/Sprites/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Monstruos/Blue Piece.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Monstruos/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/game.tscn", "res://Scenes/i_piece.tscn")
-current_scene="res://Scenes/i_piece.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainGame.tscn", "res://Scenes/IMonstruo.tscn")
+current_scene="res://Scenes/MainGame.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Grid.gd", "res://Scenes/i_piece.gd"]
+open_scripts=["res://Scenes/Grid.gd", "res://Scenes/IMonstruo.gd"]
 selected_script="res://Scenes/Grid.gd"
 open_help=["@GlobalScope"]
 script_split_offset=52
