--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,27 +1,27 @@
-[res://Scenes/i_piece.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 5,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 54,
-"scroll_position": 29.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scenes/Grid.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 312,
-"scroll_position": 287.0,
+"row": 143,
+"scroll_position": 244.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scenes/IMonstruo.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 26,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 36,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
