--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://Scenes/Grid.gd", "res://Scenes/IMonstruo.gd"]
-selected_script="res://Scenes/Grid.gd"
+selected_script="res://Scenes/IMonstruo.gd"
 open_help=["@GlobalScope"]
 script_split_offset=52
 list_split_offset=0
