Added Empty Spaces to the board. updated the initial spawn, refilling, collapsing and match finder functions to work with these new empty spaces.
Added GDScript Quality Of Life Addon by Herbherth for faster programming
Added Globalize Scripts Addon by DugRamen for maintainability for future projects.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"EditorPlugin",
+"class": &"GDScriptQualityOfLife",
+"icon": "",
+"language": &"GDScript",
+"path": "res://addons/ScriptEditorQoL/GDScriptEditorQoL.gd"
+}, {
 "base": &"Node2D",
 "class": &"IMonstruo",
 "icon": "",
