--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Monstruos/Blue Piece.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Monstruos/")
+dock_filesystem_selected_paths=PackedStringArray("res://Credits.txt")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/Monstruos/", "res://addons/", "res://addons/ScriptEditorQoL/", "res://addons/globalize-plugins/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -35,8 +35,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Grid.gd", "res://Scenes/IMonstruo.gd"]
-selected_script="res://Scenes/IMonstruo.gd"
+open_scripts=["res://Credits.txt", "res://Scenes/Grid.gd", "res://Scenes/IMonstruo.gd", "res://addons/ScriptEditorQoL/LICENSE.txt", "res://README.md"]
+selected_script="res://Credits.txt"
 open_help=["@GlobalScope"]
 script_split_offset=52
 list_split_offset=0
