--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Resource",
+"class": &"Destroy_Type",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd"
+}, {
 "base": &"EditorPlugin",
 "class": &"GDScriptQualityOfLife",
 "icon": "",
@@ -10,6 +16,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/IMonstruo.gd"
+}, {
+"base": &"Resource",
+"class": &"Move_Type",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Monstruos/Componentes/Moves/Move_Type.gd"
 }, {
 "base": &"Node2D",
 "class": &"Piece",
