General abstraction, better names for variables, new signals.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,8 +36,8 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://Scenes/Monstruos/Componentes/Moves/Cross_Explode.gd", "res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd", "res://Scenes/Grid.gd", "res://Scenes/IMonstruo.gd", "res://Scenes/Monstruos/Componentes/Moves/Move_Type.gd", "res://Scenes/Monstruos/Componentes/Moves/Normal_Move.gd", "res://Autoloads/Pos_Adapter.gd"]
-selected_script="res://Scenes/Grid.gd"
-open_help=[]
+selected_script="res://Scenes/IMonstruo.gd"
+open_help=["Signal"]
 script_split_offset=52
 list_split_offset=0
 
