--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,13 +1,13 @@
 [res://Scenes/Grid.gd]
 
 state={
-"bookmarks": PackedInt32Array(),
+"bookmarks": PackedInt32Array(65, 134, 385, 446),
 "breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([]),
+"column": 27,
+"folded_lines": Array[int]([146]),
 "h_scroll_position": 0,
-"row": 74,
-"scroll_position": 83.0,
+"row": 282,
+"scroll_position": 233.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 121,
-"scroll_position": 104.0,
+"row": 15,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,10 +73,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -105,16 +105,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 31,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 23,
-"selection_from_line": 19,
-"selection_to_column": 96,
-"selection_to_line": 19,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
