--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -17,6 +17,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scenes/IMonstruo.gd"
 }, {
+"base": &"Node2D",
+"class": &"IPiece",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/IPiece.gd"
+}, {
 "base": &"Resource",
 "class": &"Move_Type",
 "icon": "",
