--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,30 +13,30 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=202
-dock_hsplit_3=-202
+dock_hsplit_3=-200
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Monstruos/", "res://Scenes/Monstruos/Componentes/", "res://Scenes/Monstruos/Componentes/Spawns/", "res://Scenes/Monstruos/Componentes/Moves/", "res://Scenes/Monstruos/Componentes/Destroys/", "res://Autoloads/", "res://addons/ScriptEditorQoL/", "res://addons/globalize-plugins/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scenes/", "res://Scenes/Monstruos/", "res://Scenes/Monstruos/Componentes/", "res://Scenes/Monstruos/Componentes/Spawns/", "res://Scenes/Monstruos/Componentes/Moves/", "res://Scenes/Monstruos/Componentes/Destroys/", "res://Autoloads/", "res://addons/ScriptEditorQoL/", "res://addons/globalize-plugins/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainGame.tscn", "res://Scenes/Monstruos/Blue Piece.tscn", "res://Scenes/IMonstruo.tscn")
-current_scene="res://Scenes/MainGame.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainGame.tscn", "res://Scenes/IPiece.tscn", "res://Scenes/Monstruos/Green Piece.tscn", "res://Scenes/Monstruos/Pink Piece.tscn")
+current_scene="res://Scenes/IPiece.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Monstruos/Componentes/Moves/Cross_Explode.gd", "res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd", "res://Scenes/Grid.gd", "res://Scenes/IMonstruo.gd", "res://Scenes/Monstruos/Componentes/Moves/Move_Type.gd", "res://Scenes/Monstruos/Componentes/Moves/Normal_Move.gd", "res://Autoloads/Pos_Adapter.gd"]
-selected_script="res://Scenes/IMonstruo.gd"
+open_scripts=["res://Scenes/Monstruos/Componentes/Moves/Cross_Explode.gd", "res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd", "res://Scenes/Grid.gd", "res://Scenes/IPiece.gd", "res://Scenes/Monstruos/Componentes/Moves/Move_Type.gd", "res://Scenes/Monstruos/Componentes/Moves/Normal_Move.gd", "res://Autoloads/Pos_Adapter.gd"]
+selected_script="res://Scenes/IPiece.gd"
 open_help=["Signal"]
 script_split_offset=52
 list_split_offset=0
