health component and basic enemy done health component is decoupled. it can manage the health of the enemy while also listening to the events of any other node (for example a stat component, or resistances component etc.) just needs a took_damage signal.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -3,13 +3,25 @@ list=Array[Dictionary]([{
 "class": &"Destroy_Type",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd"
+"path": "res://Scenes/Pieces/Componentes/Destroys/Destroy_Type.gd"
 }, {
 "base": &"EditorPlugin",
 "class": &"GDScriptQualityOfLife",
 "icon": "",
 "language": &"GDScript",
 "path": "res://addons/ScriptEditorQoL/GDScriptEditorQoL.gd"
+}, {
+"base": &"Node",
+"class": &"Health_Component",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Components/HealthComponent.gd"
+}, {
+"base": &"Node2D",
+"class": &"IEnemy",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Interfaces/IEnemy.gd"
 }, {
 "base": &"Node2D",
 "class": &"IMonstruo",
@@ -21,17 +33,23 @@ list=Array[Dictionary]([{
 "class": &"IPiece",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scenes/IPiece.gd"
+"path": "res://Scenes/Interfaces/IPiece.gd"
 }, {
 "base": &"Resource",
 "class": &"Move_Type",
 "icon": "",
 "language": &"GDScript",
-"path": "res://Scenes/Monstruos/Componentes/Moves/Move_Type.gd"
+"path": "res://Scenes/Pieces/Componentes/Moves/Move_Type.gd"
 }, {
 "base": &"Node2D",
 "class": &"Piece",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scenes/i_piece.gd"
+}, {
+"base": &"Node2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Interfaces/Player.gd"
 }])
