--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Sprites/", "res://Scenes/", "res://Scenes/Monstruos/", "res://Scenes/Monstruos/Componentes/", "res://Scenes/Monstruos/Componentes/Spawns/", "res://Scenes/Monstruos/Componentes/Moves/", "res://Scenes/Monstruos/Componentes/Destroys/", "res://Autoloads/", "res://addons/ScriptEditorQoL/", "res://addons/globalize-plugins/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Match_helper.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Pieces/", "res://Scenes/Pieces/Componentes/", "res://Autoloads/", "res://addons/ScriptEditorQoL/", "res://addons/globalize-plugins/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/MainGame.tscn", "res://Scenes/IPiece.tscn", "res://Scenes/Monstruos/Green Piece.tscn", "res://Scenes/Monstruos/Pink Piece.tscn")
-current_scene="res://Scenes/IPiece.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray("res://Scenes/MainGame.tscn", "res://Scenes/Interfaces/IEnemy.tscn", "res://Scenes/Interfaces/Player.tscn", "res://Scenes/Pieces/Blue Piece.tscn")
+current_scene="res://Scenes/Interfaces/IEnemy.tscn"
+center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Monstruos/Componentes/Moves/Cross_Explode.gd", "res://Scenes/Monstruos/Componentes/Destroys/Destroy_Type.gd", "res://Scenes/Grid.gd", "res://Scenes/IPiece.gd", "res://Scenes/Monstruos/Componentes/Moves/Move_Type.gd", "res://Scenes/Monstruos/Componentes/Moves/Normal_Move.gd", "res://Autoloads/Pos_Adapter.gd"]
-selected_script="res://Scenes/IPiece.gd"
-open_help=["Signal"]
+open_scripts=["res://Scenes/Grid.gd", "res://Scenes/Components/HealthComponent.gd", "res://Scenes/Interfaces/IEnemy.gd", "res://Scenes/Interfaces/IPiece.gd", "res://Scenes/MainGame.gd", "res://Scenes/Match_helper.gd", "res://Scenes/Interfaces/Player.gd", "res://Autoloads/Pos_Adapter.gd"]
+selected_script="res://Scenes/Interfaces/IEnemy.gd"
+open_help=["ProgressBar"]
 script_split_offset=52
 list_split_offset=0
 
