--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,15 +12,15 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=202
+dock_hsplit_2=199
 dock_hsplit_3=-200
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Match_helper.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Pieces/", "res://Scenes/Pieces/Componentes/", "res://Autoloads/", "res://addons/ScriptEditorQoL/", "res://addons/globalize-plugins/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Grid.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Pieces/", "res://Scenes/Pieces/Componentes/", "res://Scenes/Pieces/Componentes/Moves/", "res://Scenes/Components/", "res://Autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/MainGame.tscn", "res://Scenes/Interfaces/IEnemy.tscn", "res://Scenes/Interfaces/Player.tscn", "res://Scenes/Pieces/Blue Piece.tscn")
-current_scene="res://Scenes/Interfaces/IEnemy.tscn"
+current_scene="res://Scenes/MainGame.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Grid.gd", "res://Scenes/Components/HealthComponent.gd", "res://Scenes/Interfaces/IEnemy.gd", "res://Scenes/Interfaces/IPiece.gd", "res://Scenes/MainGame.gd", "res://Scenes/Match_helper.gd", "res://Scenes/Interfaces/Player.gd", "res://Autoloads/Pos_Adapter.gd"]
-selected_script="res://Scenes/Interfaces/IEnemy.gd"
-open_help=["ProgressBar"]
+open_scripts=["res://Autoloads/Board_Effects.gd", "res://Scenes/Pieces/Componentes/Moves/Cross_Explode.gd", "res://Scenes/Grid.gd", "res://Scenes/Interfaces/IPiece.gd", "res://Scenes/Pieces/Componentes/Moves/Move_Type.gd", "res://Next.gd", "res://Autoloads/Pos_Adapter.gd"]
+selected_script="res://Autoloads/Board_Effects.gd"
+open_help=[]
 script_split_offset=52
 list_split_offset=0
 
