--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Grid.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Pieces/", "res://Scenes/Pieces/Componentes/", "res://Scenes/Pieces/Componentes/Moves/", "res://Scenes/Components/", "res://Autoloads/")
+dock_filesystem_selected_paths=PackedStringArray("res://Autoloads/Match_Finder.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/", "res://Scenes/Pieces/Componentes/", "res://Scenes/Pieces/Componentes/Moves/", "res://Scenes/Components/", "res://Autoloads/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -35,8 +35,8 @@ selected_main_editor_idx=2
 
 [ScriptEditor]
 
-open_scripts=["res://Autoloads/Board_Effects.gd", "res://Scenes/Pieces/Componentes/Moves/Cross_Explode.gd", "res://Scenes/Grid.gd", "res://Scenes/Interfaces/IPiece.gd", "res://Scenes/Pieces/Componentes/Moves/Move_Type.gd", "res://Next.gd", "res://Autoloads/Pos_Adapter.gd"]
-selected_script="res://Autoloads/Board_Effects.gd"
+open_scripts=["res://Scenes/Grid.gd", "res://Autoloads/Match_Finder.gd"]
+selected_script="res://Scenes/Grid.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
