Created the MatchFinder helper autoload, took the relevant functions from the grid script to make it lighter. preparing to create the team/equipment nodes, creating the pieces based on those nodes.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://addons/ScriptEditorQoL/GDScriptEditorQoL.gd"
 }, {
+"base": &"Node2D",
+"class": &"Grid",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scenes/Grid.gd"
+}, {
 "base": &"Node",
 "class": &"Health_Component",
 "icon": "",
