--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -32,11 +32,12 @@ current_scene="res://Scenes/MainGame.tscn"
 center_split_offset=-197
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=14
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Grid.gd", "res://Autoloads/Match_Finder.gd"]
-selected_script="res://Scenes/Grid.gd"
+open_scripts=["res://Autoloads/Board_Effects.gd", "res://addons/ScriptEditorQoL/GDScriptEditorQoL.gd", "res://Scenes/Grid.gd", "res://Scenes/Interfaces/IPiece.gd", "res://Scenes/MainGame.gd", "res://Autoloads/Match_Finder.gd", "res://Next.gd", "res://Autoloads/Pos_Adapter.gd"]
+selected_script="res://addons/ScriptEditorQoL/GDScriptEditorQoL.gd"
 open_help=[]
 script_split_offset=52
 list_split_offset=0
